# igor_modern_cpp

./: README.md
homework1/: solution.md
homework1/task2/: guessing_game.cpp
homework2/igg_image/: CMakeLists.txt
homework2/igg_image/src/: CMakeLists.txt  main.cpp
homework2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
homework2/igg_image/tests/: CMakeLists.txt
